Refactor Ensy Homey app to support InoVent devices, update app metadata, and enhance manual pairing interface.

--- a/drivers/inovent/pair/manual_pairing.html
+++ b/drivers/inovent/pair/manual_pairing.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <div class="form-container">
-      <h1 data-i18n="pair.manual.title">Add Ensy Device</h1>
+      <h1 data-i18n="pair.manual.title">Add InoVent Device</h1>
       <p data-i18n="pair.manual.description">
-        Enter your Ensy device's MAC address to connect.
+        Enter your InoVent device's MAC address to connect.
       </p>
 
       <form id="pairForm">
@@ -25,7 +25,7 @@
             required
           />
           <small data-i18n="pair.manual.mac_help"
-            >Usually found in the WIFI-settings on your device.</small
+            >Usually found in the WIFI-settings on your device. Make sure that you have connected your device to the cloud first.</small
           >
         </div>
 
